src/unit_tests/CustCodeGeneration/fail/substr1.cl
class Main inherits IO {
    main() : SELF_TYPE {
        out_string("abcdefg".substr(7, 9).concat("\n"))
    };
};